[package]
name = "ufwprofile"
version = "1.3.4"
edition = "2021"
description = "UFW app profile written in pure rust"
authors = ["Sandipsinh Rathod"]
readme = "README.md"
categories = ["accessibility"]
license = "MIT"
repository = "https://github.com/ssddOnTop/rust-ufw-app-profile"
homepage = "https://www.ssdd.dev/rustufwapp-profile"
keywords = ["UFW-profile", "ufw"]
include = ["README.md", "CHANGELOG.md", "src/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
libc = "0.2.139"

[dev-dependencies]
simple_logger = "4.0.0"
